[gd_scene load_steps=2 format=3 uid="uid://blobby001"]

[ext_resource type="Script" path="res://scripts/ui/MultiplayerLobby.gd" id="1_lobby"]

[node name="MultiplayerLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "FarmHouse Stories"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Your Name"
text = "Farmer"

[node name="AddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Server Address (127.0.0.1)"

[node name="PortInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Port (9999)"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="SingleplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Singleplayer"

[node name="DisconnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter a name and host or join a game."
horizontal_alignment = 1
autowrap_mode = 2

[node name="PlayerList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/SingleplayerButton" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/DisconnectButton" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
